--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="container">
-      <div class="header">
-        <img
-          src="./images/cloud_and_logotype.webp"
-          alt="cloud_and_logotype"
-          width="329"
-          height="113"
-          class="img_logotype"
-        />
+    <header class="header">
+      <div class="header-container container">
+        <div>
+          <img
+            src="./images/cloud_and_logotype.webp"
+            alt="cloud_and_logotype"
+            class="img_logotype"
+          />
+        </div>
         <div>
           <nav class="header_nav">
             <ul class="wrapper-link">
@@ -37,111 +37,117 @@
           <img
             src="./images/cloud_for_link.webp"
             alt="cloud_for_link"
-            width="446"
-            height="102"
             class="img_link"
           />
         </div>
       </div>
     </header>
     <main>
-      <section class="order container">
-        <h1 id="order" class="order_title title">
-          Pet Naturals of Vermont,
-          <br />
-          Calming, For Cats
-        </h1>
-        <div class="all-discription">
-          <div class="block-description">
-            <p class="order-text title">
-              Your cat deserves the best pet supplement the world has to offer.
-              That's what's in the package.
-            </p>
-            <ul class="discription-items">
-              <li class="item">
-                <img
-                  src="./images/svg/cat_paw.svg"
-                  alt="cat_paw"
-                  width="18"
-                  height="24"
-                />
-                <p class="item-text title">Features a patented calming blend</p>
-              </li>
-              <li class="item">
-                <img
-                  src="./images/svg/cat_paw.svg"
-                  alt="cat_paw"
-                  width="18"
-                  height="24"
-                />
-                <p class="item-text title">
-                  Doesn't contain herbal ingredients
-                </p>
-              </li>
-              <li class="item">
-                <img
-                  src="./images/svg/cat_paw.svg"
-                  alt="cat_paw"
-                  width="18"
-                  height="24"
-                />
-                <p class="item-text title">
-                  Helps manage <br />
-                  everyday stress
-                </p>
-              </li>
-            </ul>
-          </div>
-          <div class="block-cats">
-            <img src="./images/cats_block2.webp" alt="cats" />
-          </div>
-          <div class="block-form">
-            <div class="discount-timer">
-              <h3 class="discount-title title">TIME LEFT</h3>
-              <p class="timer title">2:00:00</p>
-              <div class="discount">
-                <p class="str title">120uah</p>
-                <p class="str-discount title">60uah</p>
-              </div>
+      <section class="order">
+        <div class="container">
+          <h1 id="order" class="order_title title">
+            Pet Naturals of Vermont,
+            <br />
+            Calming, For Cats
+          </h1>
+          <div class="all-discription">
+            <div class="block-description">
+              <p class="order-text title">
+                Your cat deserves the best pet supplement the world has to
+                offer. That's what's in the package.
+              </p>
+              <ul class="discription-items">
+                <li class="item">
+                  <img
+                    src="./images/svg/cat_paw.svg"
+                    alt="cat_paw"
+                    width="18"
+                    height="24"
+                  />
+                  <p class="item-text title">
+                    Features a patented calming blend
+                  </p>
+                </li>
+                <li class="item">
+                  <img
+                    src="./images/svg/cat_paw.svg"
+                    alt="cat_paw"
+                    width="18"
+                    height="24"
+                  />
+                  <p class="item-text title">
+                    Doesn't contain herbal ingredients
+                  </p>
+                </li>
+                <li class="item">
+                  <img
+                    src="./images/svg/cat_paw.svg"
+                    alt="cat_paw"
+                    width="18"
+                    height="24"
+                  />
+                  <p class="item-text title">
+                    Helps manage <br />
+                    everyday stress
+                  </p>
+                </li>
+              </ul>
             </div>
-            <div class="angle"></div>
-            <form class="form">
-              <label class="label">
-                <div class="wrapper-input">
-                  <input class="form-input title" type="text" name="user-name"
-                  placeholder="Name" required pattern=""[a-zA-Zа-яА-Я]+" " />
-                  <img
-                    class="input-svg"
-                    src="./images/svg/paw-grey.svg"
-                    alt="paw-grey"
-                  />
+            <div class="block-cats">
+              <img
+                class="img-cats"
+                src="./images/cats_block2.webp"
+                alt="cats"
+              />
+            </div>
+            <div class="block-form">
+              <div class="discount-timer">
+                <h3 class="discount-title title">TIME LEFT</h3>
+                <p class="timer title">2:00:00</p>
+                <div class="discount">
+                  <p class="str title">120uah</p>
+                  <p class="str-discount title">60uah</p>
                 </div>
-              </label>
-              <label class="label">
-                <div class="wrapper-input">
-                  <input
-                    class="form-input title"
-                    type="tel"
-                    name="user-phone"
-                    placeholder="+38(0__)___-__-__"
-                    required
-                    pattern=""
-                    title="+38(0__)___-__-__"
-                  />
-                  <img
-                    class="input-svg"
-                    src="./images/svg/paw-grey.svg"
-                    alt="paw-grey"
-                  />
-                </div>
-              </label>
-              <button class="form-button title" type="button">ORDER</button>
-              <p class="date text">Order date: 17.11.2021</p>
-            </form>
+              </div>
+              <div class="angle"></div>
+              <form class="form">
+                <label class="label">
+                  <div class="wrapper-input">
+                    <input class="form-input title" type="text" name="user-name"
+                    placeholder="Name" required pattern=""[a-zA-Zа-яА-Я]+" " />
+                    <img
+                      class="input-svg"
+                      src="./images/svg/paw-grey.svg"
+                      alt="paw-grey"
+                    />
+                  </div>
+                </label>
+                <label class="label">
+                  <div class="wrapper-input">
+                    <input
+                      class="form-input title"
+                      type="tel"
+                      name="user-phone"
+                      placeholder="+38(0__)___-__-__"
+                      required
+                      pattern=""
+                      title="+38(0__)___-__-__"
+                    />
+                    <img
+                      class="input-svg"
+                      src="./images/svg/paw-grey.svg"
+                      alt="paw-grey"
+                    />
+                  </div>
+                </label>
+                <button class="form-button title" type="button">ORDER</button>
+                <p class="date text">Order date: 17.11.2021</p>
+              </form>
+            </div>
           </div>
         </div>
       </section>
-      <section class="about container">
+      <!-- <section class="about container">
         <h2 id="about" class="about-title title">From the manufacturer</h2>
         <ul class="list_block2">
           <li class="info">
@@ -192,8 +198,8 @@
             </div>
           </li>
         </ul>
-      </section>
-      <section class="results container">
+      </section> -->
+      <!-- <section class="results container">
         <h2 id="results" class="results-title title">
           Best Uses for Calming Chews
         </h2>
@@ -232,7 +238,7 @@
             />
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
   </body>
 </html>
