add timer and mobile first

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="block-form">
               <div class="discount-timer">
                 <h3 class="discount-title title">TIME LEFT</h3>
-                <p class="timer title">2:00:00</p>
+                <p id="countdown" class="timer title">2:00:00</p>
                 <div class="discount">
                   <p class="str title">120uah</p>
                   <p class="str-discount title">60uah</p>
@@ -147,98 +147,99 @@
           </div>
         </div>
       </section>
-      <!-- <section class="about container">
-        <h2 id="about" class="about-title title">From the manufacturer</h2>
-        <ul class="list_block2">
-          <li class="info">
-            <img
-              src="./images/cat_block2.webp"
-              alt="cat"
-              width="186"
-              height="186"
-            />
-            <div class="info-card">
-              <h2 class="card-title">Keep Calm and Carry On</h2>
-              <p class="card-text">
-                Are you searching for a better way to ease your pet’s separation
-                anxiety or stress? Calming chews help relieve pet stress without
-                corn, wheat or artificial ingredients.
-              </p>
-            </div>
-          </li>
-          <li class="info">
-            <img
-              src="./images/emblema_block2.webp"
-              alt="emblema"
-              width="186"
-              height="186"
-            />
-            <div class="info-card">
-              <h2 class="card-title">Peace of Mind</h2>
-              <p class="card-text">
-                Pet Naturals of Vermont’s research-backed formula makes it safe
-                to double or triple the amount in times of added stress.
-              </p>
-            </div>
-          </li>
-          <li class="info">
-            <img
-              src="./images/food_block2.webp"
-              alt="food"
-              width="186"
-              height="186"
-            />
-            <div class="info-card">
-              <h2 class="card-title">More than a Tasty Treat</h2>
-              <p class="card-text">
-                Don’t let its satisfying chicken liver flavor fool you.
-                Technically, Calming isn’t a treat but it sure tastes like one.
-                Reward your best buddy with a Calming chew.
-              </p>
-            </div>
-          </li>
-        </ul>
-      </section> -->
-      <!-- <section class="results container">
-        <h2 id="results" class="results-title title">
-          Best Uses for Calming Chews
-        </h2>
-        <div class="wrapper-block-results">
-          <div class="wrapper-frame-text">
-            <img
-              src="./images/frame.webp"
-              alt="frame"
-              width="760"
-              height="354"
-              class="block-frame"
-            />
-            <div class="wrapper-results-text">
-              <p class="results-text text">
-                Car rides. Vet visits. Thunderstorms. Boarding. Parties. These
-                are just a handful of times when Calming chews may come in
-                handy. Does your dog hate to be left home alone? Does your cat
-                love hiding under the bed? Serve up a Calming chew to help
-                soothe your furry pal’s anxiety and make your life easier, too!
-              </p>
-              <p class="results-text text">For Best Results:</p>
+      <section class="about">
+        <div class="container">
+          <h2 id="about" class="about-title title">From the manufacturer</h2>
+          <ul class="list_block2">
+            <li class="info">
+              <img
+                src="./images/cat_block2.webp"
+                alt="cat"
+                width="186"
+                height="186"
+              />
+              <div class="info-card">
+                <h2 class="card-title">Keep Calm and Carry On</h2>
+                <p class="card-text text">
+                  Are you searching for a better way to ease your pet’s
+                  separation anxiety or stress? Calming chews help relieve pet
+                  stress without corn, wheat or artificial ingredients.
+                </p>
+              </div>
+            </li>
+            <li class="info">
+              <img
+                src="./images/emblema_block2.webp"
+                alt="emblema"
+                width="186"
+                height="186"
+              />
+              <div class="info-card">
+                <h2 class="card-title">Peace of Mind</h2>
+                <p class="card-text text">
+                  Pet Naturals of Vermont’s research-backed formula makes it
+                  safe to double or triple the amount in times of added stress.
+                </p>
+              </div>
+            </li>
+            <li class="info">
+              <img
+                src="./images/food_block2.webp"
+                alt="food"
+                width="186"
+                height="186"
+              />
+              <div class="info-card">
+                <h2 class="card-title">More than a Tasty Treat</h2>
+                <p class="card-text text">
+                  Don’t let its satisfying chicken liver flavor fool you.
+                  Technically, Calming isn’t a treat but it sure tastes like
+                  one. Reward your best buddy with a Calming chew.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="results">
+        <div class="results-container container">
+          <h2 id="results" class="results-title title">
+            Best Uses for Calming Chews
+          </h2>
+          <div class="wrapper-block-results">
+            <div class="wrapper-frame-text">
+              <img src="./images/frame.webp" alt="frame" class="block-frame" />
+              <div class="wrapper-results-text">
+                <p class="results-text text">
+                  Car rides. Vet visits. Thunderstorms. Boarding. Parties. These
+                  are just a handful of times when Calming chews may come in
+                  handy. Does your dog hate to be left home alone? Does your cat
+                  love hiding under the bed? Serve up a Calming chew to help
+                  soothe your furry pal’s anxiety and make your life easier,
+                  too!
+                </p>
+                <p class="results-text text">For Best Results:</p>
 
-              <p class="results-text text">
-                We recommend administering Calming chews 30 minutes prior to a
-                stressful event. The 30-minute activation period gives you a
-                chance to increase dosage if you’re not seeing expected results.
-                Calming is safe for unique stress inducing events and for
-                long-term use to help manage everyday stress.
-              </p>
+                <p class="results-text text">
+                  We recommend administering Calming chews 30 minutes prior to a
+                  stressful event. The 30-minute activation period gives you a
+                  chance to increase dosage if you’re not seeing expected
+                  results. Calming is safe for unique stress inducing events and
+                  for long-term use to help manage everyday stress.
+                </p>
+              </div>
             </div>
-          </div>
-          <div>
-            <img
-              src="./images/the_cat_is_in_the_hospital.webp"
-              alt="the_cat_is_in_the_hospital"
-            />
+            <div>
+              <img
+                src="./images/the_cat_is_in_the_hospital.webp"
+                alt="the_cat_is_in_the_hospital"
+                class="results-cat"
+              />
+            </div>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
+    <script type="module" src="./js/timer.js"></script>
   </body>
 </html>
