create today's date + finish mobile first

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
                   </div>
                 </label>
                 <button class="form-button title" type="button">ORDER</button>
-                <p class="date text">Order date: 17.11.2021</p>
+                <p class="date text">
+                  Order date: <span id="date">17.11.2021</span>
+                </p>
               </form>
             </div>
           </div>
@@ -241,5 +243,7 @@
       </section>
     </main>
     <script type="module" src="./js/timer.js"></script>
+
+    <script type="module" src="./js/todayDate.js"></script>
   </body>
 </html>
