add mask input tel

--- a/index.html
+++ b/index.html
@@ -125,13 +125,11 @@
                 <label class="label">
                   <div class="wrapper-input">
                     <input
+                      id="mask"
                       class="form-input title"
                       type="tel"
-                      name="user-phone"
-                      placeholder="+38(0__)___-__-__"
+                      name="Phone"
                       required
-                      pattern=""
-                      title="+38(0__)___-__-__"
                     />
                     <img
                       class="input-svg"
@@ -243,7 +241,8 @@
       </section>
     </main>
     <script type="module" src="./js/timer.js"></script>
-
     <script type="module" src="./js/todayDate.js"></script>
+    <script src="https://unpkg.com/imask"></script>
+    <script type="module" src="./js/maska-nomera.js"></script>
   </body>
 </html>
